--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "~47.0.8",
-    "expo-asset": "~8.6.2",
+    "expo-asset": "~8.7.0",
     "expo-constants": "~14.0.2",
     "expo-font": "~11.0.1",
-    "expo-linking": "~3.2.3",
+    "expo-linking": "~3.3.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.0.1",
@@ -29,9 +30,13 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-maps": "^1.3.2",
+    "react-native-pinch-zoom-view": "^0.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9"
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.9",
+    "react-native-webview": "11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
